[gd_scene load_steps=8 format=3 uid="uid://nvvudbtxijls"]

[ext_resource type="Script" uid="uid://0e4xb7id6aee" path="res://menus/main_menu.gd" id="1_kjikk"]
[ext_resource type="PackedScene" uid="uid://16iuasf15alq" path="res://menus/options_menu.tscn" id="2_mhw2o"]
[ext_resource type="PackedScene" uid="uid://ri5u11mug16x" path="res://menus/multiplayer_menu.tscn" id="2_mx6v7"]
[ext_resource type="PackedScene" uid="uid://dghirlf6381r8" path="res://menus/credits_menu.tscn" id="3_ox7cp"]
[ext_resource type="PackedScene" uid="uid://chwacgtkrchw5" path="res://menus/download_menu.tscn" id="5_jd5ti"]
[ext_resource type="Texture2D" uid="uid://dxy5u3sau8sa6" path="res://menus/slimetime.png" id="6_aackk"]
[ext_resource type="PackedScene" uid="uid://blqqmlx16vwl6" path="res://menus/full_screen_toggle.tscn" id="6_wq8la"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kjikk")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="MultiplayerMenu" parent="." instance=ExtResource("2_mx6v7")]
visible = false
layout_mode = 1

[node name="OptionsMenu" parent="." instance=ExtResource("2_mhw2o")]
visible = false
layout_mode = 1

[node name="CreditsMenu" parent="." instance=ExtResource("3_ox7cp")]
visible = false
layout_mode = 1

[node name="DownloadMenu" parent="." instance=ExtResource("5_jd5ti")]
visible = false
layout_mode = 1

[node name="VersionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1920.0
offset_top = -50.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 36
text = "Slime Time vX.Y.Z"
horizontal_alignment = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Title" type="TextureRect" parent="MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("6_aackk")

[node name="NewGameButton" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "New Game"

[node name="MultiplayerButton" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Multiplayer"

[node name="OptionsButton" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Options"

[node name="CreditsButton" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Credits"

[node name="QuitButton" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Quit"

[node name="DownloadButton" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Download"

[node name="FullScreenToggle" parent="." instance=ExtResource("6_wq8la")]

[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/MultiplayerButton" to="." method="_on_multiplayer_button_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/DownloadButton" to="." method="_on_download_button_pressed"]
